Update WebUtil.java